# onchain-scanner

./: .gitignore  Cargo.toml  Dockerfile  README.md  aws_regions.txt  ignored_pools.txt
.github/workflows/: lambda.yml
FetchOnchainBars/: Cargo.toml
FetchOnchainBars/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: error.rs  lib.rs
src/: http.rs  main.rs  ohlcv.rs  runner.rs  storage.rs
src/feed/: cm.rs  gt.rs  mod.rs
src/host/: aws.rs  mod.rs
src/notifier/: discord.rs  mod.rs
src/provider/: gt.rs  mod.rs
