[workspace]
members = ["FetchOnchainBars", "shared"]

[package]
name = "onchain-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.29.0"
aws-types = "1.3.0"
chrono = "0.4.38"
futures = "0.3.30"
openssl = { version = "0.10.64", features = ["vendored"] }
redb = "2.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shared = { version = "0.1.0", path = "./shared" }
strum = "0.26.2"
strum_macros = "0.26.3"
