[workspace]
members = ["FetchOnchainBars", "shared"]

[package]
name = "onchain-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.80"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-sdk-lambda = { version = "1.31", features = ["behavior-version-latest"] }
aws-types = "1.3.0"
axum = "0.7.5"
bit-vec = "0.6.3"
chrono = "0.4.38"
fast_log = "1.6.16"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
redb = "2.1.0"
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shared = { version = "0.1.0", path = "./shared" }
strum = "0.26.2"
strum_macros = "0.26.3"
tokio = { version = "1.38.0", features = ["full"] }
